# jesse

./: .dockerignore  .gitignore  .travis.yml  AGENTS.md  CSV_DATA_FEATURE.md  CSV_LOADER_README.md  Dockerfile  DockerfileTest  LICENSE  MANIFEST.in  Makefile  README.md  addNewDriverGuide.md  backtest_FractalGeneticOptimization_20251109_153333.json  backtest_FractalGeneticOptimization_20251109_153333_trades.csv  backtest_with_jesse.py  batch_csv_loader.py  codecov.yml  conftest.py  convert_binance_to_jesse.py  jesse_x_Colab_Template.ipynb  quick_test.py  release.sh  requirements.txt  requirements_rl.txt  rl_env.py  run_backtest.py  setup.py  setup_services.sh  simple_backtest.py  test_api_symbols.py  test_backtest_missing_candles.py  test_backtesting_exchanges.py  test_csv_functionality.py  test_csv_provider.py  test_csv_provider_updated.py  test_csv_simple.py  test_csv_simple_provider.py  test_custom_driver.py  test_custom_driver_complete.py  (+15 more)
.github/: ISSUE_TEMPLATE.md
charts/: deployment.md
docker_build_helpers/: install_ta-lib.sh
docker_image/: Dockerfile
docs-perf/: REPORT.md
jesse/: __init__.py  cli.py  config.py  constants.py  helpers.py  info.py  math_utils.py  test_pr.txt  testing_utils.py  utils.py  version.py
jesse/indicators/indicatorsrust/: Cargo.toml  __init__.py  pyproject.toml  test_indicators.py
jesse/indicators/indicatorsrust/src/: lib.rs
jesse/rust/: Cargo.toml  __init__.py  pyproject.toml  test_indicators.py
jesse/rust/.github/workflows/: CI.yml
jesse/rust/src/: helpers.rs  indicators.rs  lib.rs  utils.rs
logs/: .monitor.csv  (+1 more)
(+5295 files in other folders)
